--- a/app/views/mangas/new.html.erb
+++ b/app/views/mangas/new.html.erb
@@ -5,8 +5,8 @@
     <%= f.text_field :title %>
     <%= f.label :image %>
     <%= f.text_field :image %>
-    <%= f.label :vol, "Volume" %>
-    <%= f.number_field :vol %>
+    <%= f.label :vol, "Volumes" %>
+    <%= f.number_field :vol, :min =>  1 %>
 
     <%= f.submit "Add Manga" %>
 <% end %>
