--- a/app/views/mangas/show.html.erb
+++ b/app/views/mangas/show.html.erb
@@ -9,6 +9,7 @@
     <% end %>
 <% end %>
 <%= link_to "#{current_order.orders.size} Cart", cart_path %>
+<div>
 <table>
 <% @manga.volumes.each do |volume|  %>  
     <tr>
@@ -33,4 +34,5 @@
     </tr>
 <% end %>
 </table>
+</div>
 
