--- a/app/views/mangas/show.html.erb
+++ b/app/views/mangas/show.html.erb
@@ -11,25 +11,28 @@
 <%= link_to "#{current_order.orders.size} Cart", cart_path %>
 
 <table>
-<% @manga.volumes.each do |volume|  %>  
+<% @manga.volumes.order('id ASC').each do |volume|  %>  
     <tr>
         <td>
             Volume <%= volume.title %> Price: $ <%= volume.price %> Quantity: <%= volume.quantity %>
         </td>
         <td>
-        <%= form_for @order, remote: true  do |f| %>
             <% if @current_user.present? %>
-                    <% if @current_user.admin? %>
-                        <span class="vcontrols">
-                            <%= link_to "Modify", edit_volume_path(volume.id) %>
-                        </span>
-                    <% end %>
+                <%= form_for @order, remote: true  do |f| %>
+                    <% if @current_user.present? %>
+                            <% if @current_user.admin? %>
+                                <span class="vcontrols">
+                                    <%= link_to "Modify", edit_volume_path(volume.id) %>
+                                </span>
+                            <% end %>
+                        <% end %>
+                    <%= f.hidden_field :volume_id, :value => volume.id %>
+                    <%= f.number_field :quantity, :value => 1, :min =>  1, :max => volume.quantity %>
+                    <%= f.submit "Add to Cart"%>
                 <% end %>
-            <%= f.hidden_field :volume_id, :value => volume.id %>
-            <%= f.number_field :quantity, :value => 1, :min =>  1%>
-            <%= f.submit "Add to Cart"%>
-            
-        <% end %>
+            <% else %>
+                <%= button_to "Add to Cart", login_path %>
+            <% end %>
         </td>
     </tr>
 <% end %>
