--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,11 +14,12 @@
       
       <%= link_to "Home", root_path %>
       <% if @current_user.present? %>
-        <% if @current_user.admin? %>
-          <%= link_to "All users", users_path %>
-          <%= link_to "New Manga Volume", new_manga_path %> 
-        <% end %>
-        <%= link_to "Sign out #{@current_user.email}", login_path, :method => 'delete' %>
+        <%= link_to "Cart", carts_path %>
+          <% if @current_user.admin? %>
+            <%= link_to "All users", users_path %>
+            <%= link_to "New Manga Volume", new_manga_path %> 
+          <% end %>
+          <%= link_to "Sign out #{@current_user.email}", login_path, :method => 'delete' %>
       <% else %>
         <%= link_to "Sign up", new_user_path %>
         <%= link_to "Sign in", login_path %>
