redirected orders to users

--- a/app/views/mangas/show.html.erb
+++ b/app/views/mangas/show.html.erb
@@ -1,6 +1,8 @@
 <h1><%= @manga.title %></h1>
 
+
 <% if @current_user.present? %>
+    <%= link_to "#{@current_user.orders.size} Cart", orders_path %>
     <% if @current_user.admin? %>
         <div class="controls">
             <%= link_to "Edit", edit_manga_path(@manga) %>
@@ -8,7 +10,7 @@
         </div>
     <% end %>
 <% end %>
-<%= link_to "#{current_order.orders.size} Cart", cart_path %>
+
 
 <table>
 <% @manga.volumes.order('id ASC').each do |volume|  %>  
