--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,11 @@
       
       <%= link_to "Home", root_path %>
       <% if @current_user.present? %>
-        <%= link_to "Cart", carts_path %>
+        <%= link_to "Cart", orders_path %>
+      <% else %>
+        <%= link_to "Cart", login_path %>
+      <% end %>
+      <% if @current_user.present? %>
           <% if @current_user.admin? %>
             <%= link_to "All users", users_path %>
             <%= link_to "New Manga Volume", new_manga_path %> 
