--- a/app/views/mangas/edit.html.erb
+++ b/app/views/mangas/edit.html.erb
@@ -3,6 +3,10 @@
 <%= form_for @manga do |f| %>
     <%= f.label :title %>
     <%= f.text_field :title %>
+    <%= f.label :author %>
+    <%= f.text_field :author %>
+    <%= f.label :synopsis %>
+    <%= f.text_field :synopsis %>
     <%= f.label :image %>
     <%= f.text_field :image %>
 
