--- a/app/assets/stylesheets/mangas.css
+++ b/app/assets/stylesheets/mangas.css
@@ -1,8 +1,378 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Open+Sans&family=Roboto&family=Ubuntu:wght@400;700&display=swap');
+
+
+* {
+    
+    transition: all 0.3s;
+}
+
+
 .thumb {
     width: 192px;
     height: 288px;
+    border-radius: 15px;
+}
+
+.card {
+    width: 192px;
+    height: 310px;
+    display:inline-table;
+    text-align: center;
+    padding: 10px 10px 20px 28px;
+}
+
+.card:hover {
+    transform: scale(1.1);
 }
 
 .unclickable {
     pointer-events: none;
+}
+
+.content {
+    margin: 0 auto;
+    display: inline-block;
+}
+
+body {
+    background-color: whitesmoke;
+    margin: 0 auto;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 400;
+    color: rgb(63, 63, 63);
+}
+
+.container {
+    max-width: 960px;
+    margin: 0 auto;
+    position: relative;
+    top: 55px;
+}
+
+nav {
+    background-color: rgb(32, 31, 31);
+    width: 100vw;
+    height: 65px;
+    text-align: right ;
+    margin: 0 auto;
+    position: fixed;
+    top: -10px;
+    z-index: 1111;
+}
+
+.navButtons {
+    max-width: 960px;
+    margin: 0 auto;
+    position: fixed;
+    top: 30px;
+    right: 240px;
+    font-size: 120%;
+}
+
+a {
+    text-decoration:none;
+    color: black;
+}
+
+nav a {
+    width: 100vw;
+    color: white;
+    margin: 0 auto;
+    padding: 0px 0px 0px 20px;
+    font-size: 90%;
+}
+
+nav a:hover {
+    color: rgb(204, 194, 194);
+    font-size: 105%;
+    
+}
+
+strong {
+    font-size: 130%;
+    font-weight: 700;
+}
+
+.sign {
+    font-size: 180%;
+    color: whitesmoke;
+    position: fixed;
+    left: 240px;
+    top: 11px;
+}
+
+.signup {
+    width: 600px;
+    height: 640px;
+    margin: 0 auto;
+    padding-top: 5px;
+    text-align: center;
+    border-radius: 0.5em;
+    box-shadow: 1px 1px 5px rgb(183, 183, 183);
+    background-color: rgb(220, 217, 217);
+    position: relative;
+    top: 20px;
+}
+
+.su {
+    position: relative;
+    left: 25px;
+}
+
+li {
+    list-style-type: none;
+}
+
+.field {
+    width: 300px;
+    transform: scale(1.2);
+    margin: 10px 10px 10px 10px;
+    padding: 10px;
+    border: none;
+    border-radius: 0.5em;
+    box-shadow: 1px 1px 5px rgb(183, 183, 183);
+}
+
+.button {
+    width: 150px;
+    height: 40px;
+    position: relative;
+    top: 15px;
+    border: none;
+    border-radius: 0.5em;
+    box-shadow: 1px 1px 5px rgb(183, 183, 183);
+    background-color: gray;
+    color: whitesmoke;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 130%;
+    z-index: 1111;
+}
+
+.button:hover {
+    transform: scale(1.1);
+}
+
+.catalog {
+    display: inline-block;
+    padding: 0px 25px 0px 25px;
+    color: rgb(105, 101, 101);
+}
+
+.catalog:hover {
+    transform: scale(1.1);
+}
+
+.loginBox {
+    width: 600px;
+    height: 300px;
+    background-color: rgb(220, 217, 217);
+    margin: 0 auto;
+    position: relative;
+    left: 200px;
+    border-radius: 0.5em;
+    box-shadow: 1px 1px 5px rgb(183, 183, 183);
+}
+
+.login {
+    position: relative;
+    top: 60px;
+    left: 90px;
+    text-align: left;
+}
+
+.culture {
+    position:relative;
+    top: 250px;
+}
+
+.logo {
+    position: relative;
+    left: 75px;
+    color: gray;
+    transform: scale(1.2);
+}
+
+.in {
+    position: relative;
+    right: 21px;
+}
+
+.checkout {
+    margin: 0 auto;
+    text-align: center;
+    position: relative;
+    top: 200px;
+}
+
+.tys {
+    transform: scale(1.6);
+}
+
+.but {
+    position: relative;
+    top: 40px;
+    font-size: 150%;
+    -webkit-animation: bounce .3s infinite alternate;
+    -moz-animation: bounce .3s infinite alternate;
+    animation: bounce .3s infinite alternate;
+    }
+    @-webkit-keyframes bounce {
+    to { -webkit-transform: scale(1.2); }
+    }
+    @-moz-keyframes bounce {
+    to { -moz-transform: scale(1.2); }
+    }
+    @keyframes bounce {
+    to { transform: scale(1.2); }
+}
+
+.but:hover {
+    font-size: 250%;
+}
+
+.back {
+    border: 1px solid black;
+    padding: 3px;
+    border-radius: 3px;
+    position: fixed;
+    bottom: 0vh;
+}
+
+.back:hover {
+    transform: scale(1.1);
+}
+
+.crudButton {
+    border: 1px solid black;
+    padding: 3px;
+    border-radius: 3px;
+    width: 100px;
+    background-color: whitesmoke;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 400;
+}
+
+.crudButton:hover {
+    font-size: 105%;
+}
+
+.buttonCrud {
+    border: 1px solid black;
+    padding: 3px;
+    border-radius: 3px;
+    background-color: whitesmoke;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 400;
+    font-size: 99%;
+}
+
+.buttonCrud:hover {
+    font-size: 105%;
+}
+
+.labelField {
+    font-size: 105%;
+}
+
+.addCart {
+    border: 1px solid black;
+    padding: 3px;
+    border-radius: 3px;
+    width: 100px;
+    background-color: whitesmoke;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 400;
+}
+
+.addCart:hover {
+    transform: scale(1.1);
+}
+
+.mangaDes {
+    display: inline-table;
+    width: 200px;
+    position: fixed;
+}
+
+.mangaSec {
+    display:inline-table;
+    margin: 0 auto;
+    width: 750px;
+    text-align: justify;
+    position: absolute;
+    top: 25px;
+    right:0px;
+}
+
+.mangaVols {
+    margin: 0 auto;
+}
+
+.bold {
+    font-weight: 700;
+}
+
+.modify {
+    font-size: 15px;
+}
+
+.numField {
+    font-size: 19px;
+    text-align: center;
+    background: rgb(237, 233, 233);
+    border: 1px solid black;
+    border-radius: 3px;
+}
+
+.cartLabel {
+    font-size: 22px;
+    position: relative; 
+}
+
+.shoppingCart {
+    width: 100%;
+    text-align: right;
+    right: 0px;
+    padding-bottom: 150px;
+}
+
+.alignRight {
+    margin-left: auto;   
+}
+
+.check {
+    background-color: rgb(161, 158, 158);
+    color:white;
+    font-size: 170%;
+    padding: 8px;
+    border-radius: 8px;
+    border: none;
+    box-shadow: 1px 1px 5px rgb(183, 183, 183);
+}
+
+.check:hover {
+    font-size: 190%;
+}
+
+.futureFeature {
+    position: absolute;
+    right: 40px;
+    top: 0px;
+}
+
+.futureFeaturei {
+    position: relative;
+    top: 10px;
+}
+
+.searchField {
+    width: 300px;
+    transform: scale(1.2);
+    margin: 10px 10px 10px 10px;
+    padding: 10px;
+    border: none;
+    border-radius: 0.5em;
+    box-shadow: 1px 1px 5px rgb(183, 183, 183);
+    position: relative;
+    left: 60%;
 }
