--- a/app/views/mangas/show.html.erb
+++ b/app/views/mangas/show.html.erb
@@ -1,44 +1,72 @@
-<h1><%= @manga.title %></h1>
 
 
-<% if @current_user.present? %>
-    
-    <% if @current_user.admin? %>
-        <div class="controls">
-            <%= link_to "Edit", edit_manga_path(@manga) %>
-            <%= link_to "Delete", @manga, :method => 'delete', :data => { :confirm => 'Are you sure'} %>
-        </div>
+
+
+
+
+
+
+<aside class="mangaDes">
+    <h1><%= @manga.title %></h1>
+    <img class='thumb' src="<%= @manga.image %>" alt="<%= @manga.title %>">
+    <p>Author:</p>
+    <p><%= @manga.author %></p>
+    <p>Volumes:</p>
+    <p><%= @manga.vol %></p>
+
+    <% if @current_user.present? %>
+        <% if @current_user.admin? %>
+            <div class="controls">
+                <%= link_to "Edit", edit_manga_path(@manga), :class => 'crudButton'%>
+                <%= link_to "Delete", @manga, :method => 'delete', :data => { :confirm => 'Are you sure'}, :class => 'crudButton' %>
+            </div>
+        <% end %>
     <% end %>
-<% end %>
 
+    <p class='back'><%= link_to 'Back', :back %></p>
+</aside>
 
-<table>
-<% @manga.volumes.order('id ASC').each do |volume|  %>  
-    <tr>
-        <td>
-            Volume <%= volume.title %> Price: $ <%= volume.price %> Quantity: <%= volume.quantity %>
-        </td>
-        <td>
-            <% if @current_user.present? %>
-                <%= form_for @order, remote: true  do |f| %>
-                    <% if @current_user.present? %>
-                            <% if @current_user.admin? %>
-                                <span class="vcontrols">
-                                    <%= link_to "Modify", edit_volume_path(volume.id) %>
-                                </span>
-                            <% end %>
-                        <% end %>
-                    <%= f.hidden_field :volume_id, :value => volume.id %>
-                    <%= f.number_field :quantity, :value => 1, :min =>  1, :max => volume.quantity %>
-                    <%= f.submit "Add to Cart"%>
+<section class='mangaSec'>
+
+<div class='synopsis'>
+    <span class='bold'>Synopsis</span>
+    <p><%= @manga.synopsis %></p>
+</div>
+
+<table class='mangaVols'>
+    <% @manga.volumes.order('id ASC').each do |volume|  %>  
+        <tr>
+            <td>
+                <% if @current_user.present? %>
+                    <% if @current_user.admin? %>
+                        <span class="vcontrols">
+                            <%= link_to "Modify", edit_volume_path(volume.id), :class => 'crudButton modify' %>
+                        </span>
+                    <% end %>
                 <% end %>
-            <% else %>
-                <%= button_to "Add to Cart", login_path %>
-            <% end %>
-        </td>
-    </tr>
-<% end %>
+                <span class='bold'>Volume <%= volume.title %></span>  $ <%= volume.price %>
+                <% if @current_user.present? %>
+                    <% if @current_user.admin? %>
+                    Quantity: <%= volume.quantity %>
+                    <% end %>
+                <% end %>
+            </td>
+            <td>
+                <% if @current_user.present? %>
+                    <%= form_for @order, remote: true  do |f| %>
+                
+                        <%= f.hidden_field :volume_id, :value => volume.id %>
+                        <%= f.number_field :quantity, :value => 1, :min =>  1, :max => volume.quantity %>
+                        <%= f.submit "Add to Cart", :class => 'addCart'%>
+                    <% end %>
+                <% else %>
+                    <%= button_to "Add to Cart", login_path, :class => 'addCart' %>
+                <% end %>
+            </td>
+        </tr>
+    <% end %>
 </table>
 
-<%= link_to 'Back', :back %>
+
+</section>
 
