--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,34 +1,39 @@
-<h1>heyyy</h1>
 
-<h1>heyo</h1>
+<div class="shoppingCart">
+    <h1>Shopping Cart</h1>
 
+    <% @orders.order('id ASC').each do |item|%>
 
-<% @orders.order('id ASC').each do |item|%>
-
-    <h3><%= item.volume.title %></h3>
-    <h5><%= item.volume.price %></h5>
-
-    <%= form_for item do |f| %>
-    
-        <%= f.hidden_field :volume_id, :value => item.volume.id %>
-        <%= f.number_field :quantity, :value => item.quantity.to_i, :min =>  1, :max => item.volume.quantity%>
-        <%= f.submit "Update Cart" %>
-
-    <%= button_to "Remove Items", item, method: :delete, remote: true%>
+        <table class='alignRight'>
+            <tr>
+                <td>
+                <span class='cartLabel bold'><%= item.volume.manga.title %> Volume <%= item.volume.title %></span>
+                $<%= item.volume.price %>
+                </td>
+            
+                <td>
+                <%= form_for item do |f| %>
+                
+                    <%= f.hidden_field :volume_id, :value => item.volume.id %>
+                    <%= f.number_field :quantity, :value => item.quantity.to_i, :min =>  1, :max => item.volume.quantity, :class => 'numField'%>
+                    <%= f.submit "Update Cart", :class => 'buttonCrud' %>
+                    <%= link_to "Remove Items", item, method: :delete, remote: true, :class => 'crudButton'%>
+                    
+                <% end %>
+                </td>
+            </tr>
+        </table>
         
+        <h3>$<%= item.total %></h3>
+        
+    <% end %>  
+
+    <h2>Total Cart Value: $ <%= @current_user.subtotal %></h2>
+
+
+    <% if @orders.size != 0 %>
+        <%= link_to "Checkout", checkout_path, :class => 'check'%>
+    <% else %>
+        <%= link_to "Go and buy something!", root_path, :class => 'check' %>
     <% end %>
-
-    
-
-    <h2>Subtotal: <%= item.total %></h2>
-
-<% end %>  
-
-<h3>Total Cart Value: $ <%= @current_user.subtotal %></h3>
-
-
-<% if @orders.size != 0 %>
-    <%= link_to "Checkout", checkout_path%>
-<% else %>
-    <%= link_to "Go and buy something!", root_path %>
-<% end %>
+</div>
