--- a/app/views/pages/checkout.html.erb
+++ b/app/views/pages/checkout.html.erb
@@ -1,3 +1,9 @@
-<h1>Thanks for shopping!</h1>
 
-<%= link_to "X", root_path%>
+
+
+<div class="checkout">
+
+    <h1 class="tys">Thanks for shopping!</h1>
+    <div class="but"><%= link_to "x", root_path %></div>
+
+</div>
