--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,8 @@
 <h1>All Users</h1>
 
-<% @users.each do |user| %>
-    <p><%= user.email %></p>
-<% end %>
+<div>
+    <% @users.each do |user| %>
+        <p><%= user.email %></p>
+    <% end %>
+</div>
 
