--- a/app/views/mangas/new.html.erb
+++ b/app/views/mangas/new.html.erb
@@ -5,6 +5,8 @@
     <%= f.text_field :title %>
     <%= f.label :image %>
     <%= f.text_field :image %>
+    <%= f.label :synopsis %>
+    <%= f.text_field :synopsis %>
     <%= f.label :vol, "Volumes" %>
     <%= f.number_field :vol, :min =>  1 %>
 
