--- a/app/views/mangas/edit.html.erb
+++ b/app/views/mangas/edit.html.erb
@@ -5,6 +5,8 @@
     <%= f.text_field :title %>
     <%= f.label :author %>
     <%= f.text_field :author %>
+    <%= f.label :author %>
+    <%= f.text_field :author %>
     <%= f.label :synopsis %>
     <%= f.text_field :synopsis %>
     <%= f.label :image %>
