--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+
+    <meta property='og:title' content='Project 1: Manga-Shoppu'/>
+    <meta property='og:image' content='app/assets/images/SS3.png'/>
+    <meta property='og:url' content='https://github.com/kendlc/Project1-manga-shoppu'/>
+
     <title>Project1</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
