linkedin media link thumbnail edit

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
 
     <meta property='og:title' content='Project 1: Manga-Shoppu'/>
     <meta property='og:image' content='app/assets/images/SS3.png'/>
-    <meta property='og:url' content='https://github.com/kendlc/Project1-manga-shoppu'/>
+    <meta property='og:url' content='https://manga-shoppu.herokuapp.com/'/>
 
     <title>Project1</title>
     <%= csrf_meta_tags %>
