linkedin media link thumbnail edit

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,9 +2,7 @@
 <html>
   <head>
 
-    <meta property='og:title' content='Project 1: Manga-Shoppu'/>
-    <meta property='og:image' content='app/assets/images/SS3.png'/>
-    <meta property='og:url' content='https://manga-shoppu.herokuapp.com/'/>
+   <%= display_meta_tags(default_meta_tags) %>
 
     <title>Project1</title>
     <%= csrf_meta_tags %>
